[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioredis[all]>=2.0.1",
    "coloredlogs>=15.0.1",
    "fastapi[all]>=0.136.1",
    "python-json-logger>=4.1.0",
    "redis>=7.4.0",
    "setuptools>=82.0.1",
]
